[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mplinkfig"
#dynamic = ["version"]
version = "0.1"
description = 'Make nice figures with matplotlib and inkscape'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "felix-cache", email = "felix.cache@ikmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "datetime",
  "matplotlib",
  "numpy",
]

[project.urls]
Documentation = "https://github.com/felix-cache/mplinkfig#readme"
Issues = "https://github.com/felix-cache/mplinkfig/issues"
Source = "https://github.com/felix-cache/mplinkfig"

#[tool.hatch.version]
#path = "src/mplinkfig/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mplinkfig tests}"

[tool.coverage.run]
source_pkgs = ["mplinkfig", "tests"]
branch = true
parallel = true
omit = [
  "src/mplinkfig/__about__.py",
]

[tool.coverage.paths]
mplinkfig = ["src/mplinkfig", "*/mplinkfig/src/mplinkfig"]
tests = ["tests", "*/mplinkfig/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
